force-app/main/default/objects/Sales_Territory__c/fields/Annual_Target__c.field-meta.xml
<CustomField>
    <fullName>Annual_Target__c</fullName>
    <label>Annual Target</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>