force-app/main/default/objects/Sales_Territory__c/fields/Quota_Attainment__c.field-meta.xml
<CustomField>
    <fullName>Quota_Attainment__c</fullName>
    <label>Quota Attainment</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>