force-app/main/default/objects/Sales_Territory__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>North</fullName><default>false</default><label>North</label></value>
            <value><fullName>South</fullName><default>false</default><label>South</label></value>
            <value><fullName>East</fullName><default>false</default><label>East</label></value>
            <value><fullName>West</fullName><default>false</default><label>West</label></value>
            <value><fullName>Central</fullName><default>false</default><label>Central</label></value>
            <value><fullName>International</fullName><default>false</default><label>International</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>