force-app/main/default/objects/Sales_Territory__c/fields/Territory_Manager__c.field-meta.xml
<CustomField>
    <fullName>Territory_Manager__c</fullName>
    <label>Territory Manager</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Sales Territories</relationshipLabel>
    <relationshipName>Sales_Territories</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>